tdf#55665: Fix a corner case OLE processing

This fixes two problems with WW8Export::TestOleNeedsGraphic:
1. not testing for NULL pGraphicsStream pointer,
2. not releasing that pointer in all cases.

Change-Id: I67921aec3ce0cb131359e66ee3a6a136d76952a0